--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -70,7 +70,7 @@ larger than $87\pm 14$\hkpc corresponding to our observational
 benchmark; for clusters this fraction rises to $(7\pm 3)\%$, consistent
 with previous studies of dark matter to baryon separations. In terms
 of absolute number densities we find that the expected value for
-groups similar to \bullg\ is tree times larger than the expected value
+groups similar to \bullg\ is three times larger than the expected value
 for clusters. This extension of the theoretical predictions and
 observational results towards low mass bi-modal dark matter
 configurations opens up the possibility for a new statistical test of
@@ -168,7 +168,6 @@ overdensity criterion by \cite{Bryan1998}. An important feature of BDM
 is that it allows us to detect sub-halos inside larger virialized
 structures.  
 
-
 All the raw data used in this Letter is available through the Multidark database \footnote{\texttt{www.multidark.org}}
 \citep{Riebe2013}.  Furthermore, in order to facilitate the
 reproducibility and reuse of our results we have made available all
@@ -232,21 +231,17 @@ the host halo and its center of mass (computed from all the particles
 inside the $R_{\rm vir}$), $X_{\rm off}=||\vec{r}_{min}-\vec{r}_{cm}||/R_{\rm vir}$, which serves as a
 measurement of how much the host halo is perturbed. 
 
-In this letter we work with three quantities that could be inferred
+In this letter we work with two quantities that could be inferred
 from observations of Bullet-like systems. The projected distance
-between two dominant DM clumps, $d_{\rm 2D}$; the projected distance
-between the DM-baryonic clumps, $d_{\rm 2D}^{\rm bar}$; and the mass
-ration associated to the two dominant DM clumps.  
+between two dominant DM clumps, $d_{\rm 2D}$ and the projected distance
+between the DM-baryonic clumps, $d_{\rm 2D}^{\rm bar}$.
 
 From the simulation point of view, the first quantity can be
 translated into the 2D projected values of $||\vec{r}||$ and its value
 relative to the virial radius $D_{\rm   off}= ||\vec{r}||_{\rm
   2D}/R_{\rm vir}$. The second quantity, the projected DM-baryon
 distance, is not directly available from a DM-only simulation but can
-be estimated from the data.  The last quantity, the mass ratio, can be
-approximated by ratio of the circular velocities of the two clumps
-$V_{\rm c,sub}/V_{\rm  c,host}$ which should be equal to the square
-root of the mass ratio. 
+be estimated from the data.  
 
 We also use the physical quantities described above to discriminate
 between grazing trajectories, $|\mu|<0.9$, and Bullet-like collissions
@@ -262,7 +257,7 @@ to the center of the halo $D_{\rm off} < 1.0$ and $\mu< -1$.
 \section{Results}
 \label{sec:results}
 
-\subsection{Displacements and Relative Circular Velocities}
+\subsection{DM-DM Displacements}
 \label{fig:displacement}
 
 \begin{figure*}
@@ -286,58 +281,33 @@ to the center of the halo $D_{\rm off} < 1.0$ and $\mu< -1$.
 \label{fig:displacement}
 \end{figure*}
 
-\begin{figure*}
-\begin{center}
-\includegraphics[width=1.0\textwidth]{figure_2.eps} 
-\end{center}
-\caption{2D histogram in the plane $V_{\rm c,sub}/V_{\rm
-    c,host}$-$d_{2D}$. The left panel corresponds to clusters and the
-  right panel to groups. The star with error bars corresponds to
-  \bullg\ data reported from \citet{2013A&A...552A..80M} and
-  \citet{Gastaldello}. The data used to construct the histograms
-  integrates the objects at all redshifts. }
-\label{fig:mass_displacement}
-\end{figure*}
+Figure \ref{fig:displacement} presents the integrated
+probability distribution for the DM-DM displacements, $d_{\rm 2D}$ The
+left panel shows the displacement in physical units and the right
+panel as a fraction of the virial radius of the host halo.  The panel
+with the projected 2D physical displacements also shows a vertical
+stripe with the estimated displacement for the Bullet-group reported
+by \cite{Gastaldello}.   
 
-The main result of this paper is summarized in Figure
-\ref{fig:displacement}, it presents the integrated
-probability distribution for the displacement between the center of
-the host halo and its dominant sub-halo. The left panel shows
-the displacement in physical units and the right panel as a fraction
-of the virial radius of the host halo. 
-
-Figure \ref{fig:displacement} shows the results for two different
-populations at all redshifts. The panel with the projected 2D physical displacements also shows a
-vertical stripe with the estimated displacement for the Bullet-group reported by
-\cite{Gastaldello}. In the group sample we see that a fraction of
+In the group sample we see that a fraction of
 $40\%$ to $60\%$  should present a displacement equal than the
 estimate for \bullg; in the cluster sample this fraction increases to
 $70\%$-$80\%$. The uncertainties in this estimates are derived from
-the uncertainties in the displacement measurement for \bullg.This
+the uncertainties in the displacement measurement for \bullg. This
 fraction is naturally higher in more massive systems because they are
 larger in size. Normalizing the displacements by the virial radius,
 right panel Figure \ref{fig:displacement}, we see that the
-distribution is the same regardless of the sample and the redshift.
+distributions are similar for the two samples at all redshifts.
 
-Figure \ref{fig:mass_displacement} shows 2D histograms in a plane
-defined by the ratio of the two circular velocities $V_{\rm c,
-  sub}/V_{\rm c, host}$ and the projected 2D physical displacements;
-quantities that can be constrained by observations. 
 
-To construct this figure we co-add all the halos in the sample (left,
-clusters; right, groups) at all redshifts. We stack the data because
-we do not observe any strong redshift dependence. This allows
-us to increase the signal in each bin. We overplot a star with error
-bars that represents the observational constraints for the system
-\bullg\ using the fraction in velocity dispersion in the line-of-sigth
-of the group SL2S SJ08544-0121 ($\sigma_{host}=341^{+43}_{-109}$\kms and
-$\sigma_{sub}=185^{+30}_{-62}$\kms) reported by
-\citet{2013A&A...552A..80M} and the DM displacement inferred from the
-data presented by \cite{Gastaldello}. 
+
+
+\subsection{Collision Geometries}
+\label{sec:geometry}
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=1.0\textwidth]{figure_3.eps}
+\includegraphics[width=1.0\textwidth]{figure_2.eps}
 \end{center}
 \caption{2D histograms in the plane $\mu$-$D_{\rm off}$. The left
   panel corresponds to clusters and the right panel to groups. The data
@@ -345,71 +315,56 @@ data presented by \cite{Gastaldello}.
 \label{fig:geometry}
 \end{figure*}
 
-
-
-\subsection{Collision Geometries}
-\label{sec:geometry}
-
-Figure \ref{fig:geometry} presents the geometry of the bullet groups using the 
+Figure \ref{fig:geometry} presents the geometry of the intereactions using the 
 variables $\mu$ and $D_{\rm off}$. The first evident feature is that
-most of the configurations have $|\mu|>0.9$ ($\theta\leq 30^{\circ}$),
-meaning that most of the collisions can be described as a head-on
-encounter while only a minority with $|\mu|<0.9$ have grazing
-trajectories. For the pairs on radial trajectories there are three
-regions of interest in this plane that describe different stages in
-the collision, assuming that the sub-halo merges (or falls below the
-BDM detection threshold) right at its second pass through the center
-of the host halo \citep{Poole2006}.  
+most of the configurations have head-on encouters, $|\mu|>0.9$
+($\theta\leq 30^{\circ}$), while only a minority with $|\mu|<0.9$ can
+be described as having  grazing trajectories. 
 
+For pairs on radial trajectories there are three regions of interest
+in this plane that correspond to the three merging stages described
+at the end of Section \ref{sec:geometry} assuming that the sub-halo
+merges (or falls below the BDM detection threshold) right at its
+second pass through the center of the host halo \citep{Poole2006}.  
 
 The first region has $\mu\approx-1$ and $D_{\rm off}>0.6$, which
 locates the systems where a head-on collision has just started. The
-sub-halo is close to the boundary of the host halo and is
-infalling. The second region has $\mu\approx 1$ and $D_{\rm off}<0.6$;
-at this stage the collision continues after the first crossing of the
-host's center, the low number of halos with radial infalling velocities
-and displacements $D_{\rm off}>0.6$ suggest that this the maximum
-range of radii for the apogee.  The third region corresponds to
-$\mu\approx-1$ and $D_{\rm off}<0.6$ that is the the
-secondary infall after apogee. We use this sequence in the next
-subsection to estimate the expected displacement between baryons and
-the dominant DM clump. 
+second region has $\mu\approx 1$ and $D_{\rm off}<0.6$; at this stage
+the collision continues after the first crossing of the host's center,
+the low number of halos with radial infalling velocities and
+displacements $D_{\rm off}>0.6$ suggest that this the maximum range of
+radii for the apogee.  The third region corresponds to $\mu\approx-1$
+and $D_{\rm off}<0.6$ that is the the secondary infall after apogee.  
+
+In the next subsection we use the information in this sequence to
+estimate the expected DM-baryon displacement. 
 
 
 
-\subsection{Displacement between Dark Matter and Baryons}
+\subsection{DM-baryon Displacement}
 \label{sec:baryonic_displacements}
 
+The results we have derived so far apply to multi-modal systems and
+the expected separation between the two dominant dark matter
+clumps. However, a non-zero DM-DM displacement does not imply 
+a non-zero DM-baryon displacement. Given that we use a DM only
+simulation, we have to find a way to estimate a DM-baryon displacement
+from the available information.  
 
-
-Strictly speaking, the results we have derived so far apply to multi-modal
-groups and their expected separation between the two dominant dark
-matter clumps. However, a non-zero DM-DM displacement cannot be
-interpreted as having a corresponding non-zero DM-baryon
-displacement. Given that we use a DM only simulation, we have to find
-a way to estimate DM-baryon displacements from the available information.
-
-
-This estimate is based on the different collision stages described at
-the end of the previous sub-section.  For instance, in systems where
-the halo is starting to fall into the host ($\mu\approx-1$, $D_{\rm
-  off}>0.6$) the DM-baryon displacement should be equal to
-zero. However, when the  sub-structure has already passed through the
-center of the host halo, i.e. cases where $\mu\approx 1$, the
-DM-baryon displacement should be different from zero.
-
-To estimate the DM-baryon displacement we  work under the following
-hypothesis. First, we consider that systems with $|\mu|<0.9$ have a
-baryonic displacement, $d_{2D}^{\rm bar}$, equal to zero. This means
-that only head-on encounters produce a displacement. Second, we
-consider that all systems with infalling velocities $\mu<-0.9$ and
-large displacements $D_{\rm off}>0.6$ also have baryonic displacements
-equal to zero. Third, for all the other cases we estimate the
-displacement between the baryons and the dominant DM peak by
-$d_{2D}^{\rm bar} = X_{\rm off} R_{\rm   vir}$, where $X_{\rm   off}$
-is the offset computed between the minium of potential and the center
-of mass for each host halo computed from all the matter inside the
-virial radius. 
+This estimate is based on the different kinds of trajectories and
+collision stages described in previous sections. To start with, we
+consider that systems with $|\mu|<0.9$, describing grazing
+trajectories, have a baryonic displacement equal to zero.  In systems
+with head-on collissions, $|\mu|>0.9$, we distinguish two different
+cases. The first one, systems with  $\mu<-0.9$ and large displacements $D_{\rm
+  off}>0.6$ most probably describe the beginning of the interaction
+and should have baryonic displacements equal to zero.
+equal to zero. In all the other cases, the DM-baryon displacement
+should be equal to zero. We approximate this displacement by  $d_{\rm
+  2D}^{\rm bar} = X_{\rm off} R_{\rm   vir}$, where $X_{\rm   off}$ is
+the offset computed between the minium of potential and the center of
+mass for each host halo computed from all the matter inside the virial
+radius.  
 
 
 This simplified model does not take into account that there is a
@@ -418,24 +373,26 @@ collision has not started and should have $d_{2D}^{\rm bar}=0$. A detailed
 modeling of this fraction requires the study of the complete merger
 tree of the halo and sub-halo, a study beyond the scope of this
 Letter. Instead we caution the reader that the derived fraction of
-halos with a displacement $<d_{2D}^{\rm bar}$ can be considered as an
+halos with a displacement $<d_{2D}^{\rm bar}$ must be considered as an
 upper limit. 
 
-The results for the integrated distributions for $>d_{2D}^{\rm bar}$
+The results for the integrated distributions for $>d_{\rm 2D}^{\rm bar}$
 are shown in Figure \ref{fig:baryonic_displacements}. The dashed lines
 represented the results for groups and the continuous lines correspond
 to clusters. As a test of our model we compare the cluster results
 against the analytic fit provided by \cite{ForeroRomero2010}. This fit
 reproduces the statistics for the DM-baryon separation found for
 clusters more massive than $>10^{14}$\hMsun\ in a simulation
-which included a description for DM and gas with $8$ times the volume of the
-Bolshoi Simulation. The fit is valid for separations larger than
-$70$\hkpc, beyond which we find that it provides a remarkably good
-description within a factor of $\sim 2$ of our results. This gives us
-confidence in our approach to estimate the expected fraction of
-groups with a DM-baryon displacement.
+which included a description for DM and gas with $8$ times more volume
+and $8$ times less mass resolution than the Bolshoi Simulation. The
+fit is valid for separations larger than $70$\hkpc, beyond which we
+find that it provides a remarkably good description within a factor of
+$\sim 2$ of our results. This gives us confidence in our approach to
+estimate the expected fraction of groups with a DM-baryon
+displacement. 
 
-From Figure \ref{fig:baryonic_displacements} we see that only a
+
+Finally, from Figure \ref{fig:baryonic_displacements} we see that only a
 fraction of $0.1\%$ to $1\%$ of the groups are expected to have a
 DM-baryon displacement equal or larger than $87\pm 14$\hkpc as
 observed in \bullg. This fraction rises to $4\%$ to $10\%$ in the case
@@ -443,28 +400,13 @@ of clusters, consistent with the results reported by
 \cite{ForeroRomero2010}. 
 
 
+\subsection{Towards a Statistical Comparison Against Observations}
 
-\begin{figure}
-\begin{center}
-\includegraphics[width=0.5\textwidth]{figure_4.eps}
-\end{center}
-\caption{Integrated probability distribution for the estimated
-  baryonic displacements in the group and cluster samples. Continous (dashed)
-  lines correspond to clusters (groups). The continuous black line
-  marked as $P_{2D}$ shows the statistics reported by
-  \citet{ForeroRomero2010} for a cosmological simulation including DM
-  and baryons. The vertical lines correspond to the mean value and
-  uncertainty of the displacement measured for \bullg.} 
-\label{fig:baryonic_displacements}
-\end{figure}
-
-\subsection{Possible Observational Statistical Tests}
-
-Recently \citep{Foex2013} presented an analysis of $80$ galaxy groups
+Recently \cite{Foex2013} presented an analysis of $80$ galaxy groups
 in the SL2S sample. From the light distribution, only $34$ objects
 ($\sim 42\%$) have regular isophotes, $33$ had ellongated
 isophotes (hints of merging system), and $13$ ($\sim 16\%$) had a
-clear bi-modal light distribution.  The system \bullg\ is one of these
+clear bi-modal light distribution; \bullg\ is one of these
 $13$ systems.   
 
 The bi-modal objects are defined to have at least a clear second
@@ -474,33 +416,52 @@ $64$ \hkpc and the average is $145\pm 52$\hkpc.
 
 We now make a comparison of these fractions against the results of our
 simulations. The results are summarized in Table
-\ref{table:numbers}. The first row indicate the total number of halos
-in each sample, at each redshift. The second row shows the number of
-objects with DM-DM displacement $46\hkpc< d_{\rm 2D}< 350$\hkpc. The
+\ref{table:numbers}. The first row indicates the total number of halos
+in each sample at each redshift. The second row shows the number of
+objects with DM-DM displacements $46\hkpc< d_{\rm 2D}< 350$\hkpc. The
 last row indicates the number of objects in the previous sub-sample
-with a  $d_{\rm 2D}^{\rm bar}>87$\hkpc. 
+with DM-baryon displacements $d_{\rm 2D}^{\rm bar}>87$\hkpc. 
 
 Considering that the statistics for the cluster sample are dominated
 by objects in the mass range of the \bullg we make a comparison
 against this sample. Table \ref{table:numbers} shows that $\sim 40\%$ of the 
 clusters are expected to have large DM-DM displacements, this is a
 factor of $\sim 2$ larger than the observational estimate by
-\citep{Foex2013}. However, roughly $\sim 7\%$ of these systems present a
+\cite{Foex2013}. However, roughly $\sim 7\%$ of these systems present a
 displacement equal or larger than the observed in the \bullg, a
 fraction that is compatible with the $1/13\sim 0.07$ fraction in the
-observational sample. 
+SL2S sample from which \bullg\ was drawn. 
 
 
-This rough comparison  that our estimates for the relative number of
-bullet systems with respect to multi-modal systems is compatible with
+This rough comparison  shows that our estimates for the relative number of
+bullet systems (large DM-baryon displacements) with respect to
+multi-modal systems (large DM-DM displacements) is compatible with
 observations. A proper comparison must take into account all the observational
 uncertainties, biases, mixes between our two populations (groups \&
-clusters at different redshifts) to derive a stronger prediction from
+clusters at different redshifts) to derive a stronger bound from
 the simulation, something that is beyond the scope of this Letter.   
 
-Neverthless, comparing the group and cluster samples we expect to have
-a number density of bullets similar to \bullg that is three times
-larger for groups than for clusters.
+Neverthless, comparing the number for group and cluster samples in the
+last row of Table \ref{table:numbers} we can already predict that a
+fixed redshift the number density of bullets similar to \bullg that
+three times larger for groups than for clusters.   
+
+
+
+
+\begin{figure*}
+\begin{center}
+\includegraphics[width=0.9\textwidth]{figure_3.eps}
+\end{center}
+\caption{Integrated probability distribution for the estimated
+  baryonic displacements in the group and cluster samples. Continous (dashed)
+  lines correspond to clusters (groups). The continuous black line
+  marked as $P_{2D}$ shows the statistics reported by
+  \citet{ForeroRomero2010} for a cosmological simulation including DM
+  and baryons. The vertical lines correspond to the mean value and
+  uncertainty of the displacement measured for \bullg.} 
+\label{fig:baryonic_displacements}
+\end{figure*}
 
   
 \begin{table*}
