--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -1,7 +1,6 @@
 \documentclass{emulateapj}
 %\documentclass{aastex}
 \submitted{{\it Submitted for publication in ApJL}}
-\usepackage{multirow,color,wrapfig,ulem}
 \usepackage {graphicx}
 
 \usepackage{amsmath} 
@@ -77,8 +76,8 @@ configurations opens up the possibility for a new statistical test of
 $\Lambda$CDM.   
 \end{abstract}
 
-\keywords{dark matter, galaxies: clusters: individual (SL2S
-  J08544-0121), galaxies: interactions, methods: numerical}
+\keywords{dark matter --- galaxies: clusters: individual (SL2S
+  J08544-0121) --- galaxies: interactions --- methods: numerical}
 
 
 \section{Introduction}
