goes for a second round of comments

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -51,29 +51,27 @@
 \begin{abstract}
 
 We estimate the expected distribution of displacements between the two
-dominant dark matter density peaks and between baryons and dark matter
-in halos simulated within a full cosmological context in $\Lambda$CDM.
-We use as a benchmark the observation of \bullg, which is the lowest mass system observed so far
+dominant dark matter (DM) density peaks (DM-DM displacements) and between
+gaseous baryons and dark matter (DM-baryon displacements) in DM halos 
+with masses larger than $10^{13}$\hMsun. We use as a benchmark the
+observation of \bullg, which is the lowest mass system ($1.0\times
+10^{14}$\hMsun) observed so far
 featuring a bi-modal dark matter distribution with a dislocated
-baryonic component. We extend to lower masses previous computational results by
-studying two halo samples: groups and clusters. We find that $(50 \pm
-10)\%$ of the dark matter halos with circular velocities in the range
-$300\kms$ to $700\kms$ (groups) show multimodal morphologies with
-displacements between the dark matter clumps equal or larger than
-$186 \pm 30$\hkpc as observed in \bullg. For dark matter halos with
-circular velocities larger than $700\kms$ (clusters) this fraction
-rises to $(70 \pm 10)\%$. Using the same simulation we estimate the
-dark matter-to-baryon spatial separation and find that $0.1$ to
-$1.0\%$ of the groups should present separations equal or
-larger than $87\pm 14$\hkpc corresponding to our observational
-benchmark; for clusters this fraction rises to $(7\pm 3)\%$, consistent
-with previous studies of dark matter to baryon separations. In terms
-of absolute number densities we find that the expected value for
-groups similar to \bullg\ is three times larger than the expected value
-for clusters. This extension of the theoretical predictions and
-observational results towards low mass bi-modal dark matter
-configurations opens up the possibility for a new statistical test of
-$\Lambda$CDM.   
+baryonic component. We find that $(50 \pm 10)\%$ of the dark matter
+halos with circular velocities in the range $300\kms$ to $700\kms$
+(groups) show DM-DM displacements equal or larger than $186 \pm
+30$\hkpc as observed in \bullg. For dark matter halos with circular
+velocities larger than $700\kms$ (clusters) this fraction rises to
+$(70 \pm 10)\%$. Using the same simulation we estimate the DM-baryon
+displacements and find that $0.1$ to $1.0\%$ of the groups should
+present separations equal or larger than $87\pm 14$\hkpc corresponding
+to our observational benchmark; for clusters this fraction rises to
+$(7\pm 3)\%$, consistent with previous studies of dark matter to
+baryon separations. Considering both constraints on the DM-DM and
+DM-baryon displacements we find that the number density of groups
+similar to \bullg\ is $\sim 6.0\times 10^{-7}$ Mpc$^{-3}$, three times
+larger than the estimated value forclusters. These results open up
+the possibility for a new statistical test of $\Lambda$CDM.     
 \end{abstract}
 
 \keywords{dark matter --- galaxies: clusters: individual (SL2S
@@ -115,9 +113,9 @@ mass systems has to be weighted by the probability of being in a
 merger and  presenting a large displacement between the DM and
 baryonic components.  These two conditions (merger rates, maximum
 possible displacement) are a funcion of DM halo mass in $\Lambda$CDM
-cosmologies.  A detailed statistical study to estimate the abundance
-of Bullets has been performed for clusters but not for lower mass
-systems \citep{ForeroRomero2010}.  
+cosmologies.  A detailed statistical study to estimate the DM-gas
+displacements of Bullets has been performed for clusters
+\citep{ForeroRomero2010} but not for lower mass systems.
 
 In this Letter we extend such study for systems in the group mass
 scale. We measure the abundance of DM systems with with a multi-modal
@@ -218,8 +216,8 @@ The angle between these two vectors can be quantified by,
  \end{equation} 
 %
 This encondes information about the collision, i.e. cases of
-$|\mu|\approx 1$ can be considered as head-on collisions while
-$|\mu|\approx 0$ describes a grazing trajectory.  
+$|\mu|\sim 1$ can be considered as head-on collisions while
+$|\mu|< 0.9$ describes a grazing trajectory.  
 
 The geometrical configuration can be further described by the
 following quantities. The circular velocity of each component, $V_{\rm
@@ -243,14 +241,13 @@ distance, is not directly available from a DM-only simulation but can
 be estimated from the data.  
 
 We also use the physical quantities described above to discriminate
-between grazing trajectories, $|\mu|<0.9$, and Bullet-like collissions
-with $|\mu|\approx 1$. In the latter case we can also distinguish three
-main stages in a such encounter. First, when the sub-halo crosses the
-virial radius of the host halo starting a head on collision, $D_{\rm
-  off} \approx 1$ and $\mu\approx -1$. Second, as the sub-halo crosses
-for the first time the center of the host halo $D_{\rm off}<1.0$ and
-$\mu\approx 1$. Third, as the sub-halo reaches apogee and comes back
-to the center of the halo $D_{\rm off} < 1.0$ and $\mu< -1$.  
+three main stages in a Bullet-like encounter with $|\mu|\sim
+1$. First, when the sub-halo crosses the virial radius of the host
+halo starting a head on collision, $D_{\rm   off} \sim 1$ and $\mu\sim
+-1$. Second, as the sub-halo crosses for the first time the center of
+the host halo $D_{\rm off}<1.0$ and $\mu\sim 1$. Third, as the
+sub-halo reaches apogee and comes back to the center of the halo
+$D_{\rm off} < 1.0$ and $\mu\sim -1$.   
 
 
 \section{Results}
@@ -281,7 +278,7 @@ to the center of the halo $D_{\rm off} < 1.0$ and $\mu< -1$.
 \end{figure*}
 
 Figure \ref{fig:displacement} presents the integrated
-probability distribution for the DM-DM displacements, $d_{\rm 2D}$ The
+probability distribution for the DM-DM displacements, $d_{\rm 2D}$. The
 left panel shows the displacement in physical units and the right
 panel as a fraction of the virial radius of the host halo.  The panel
 with the projected 2D physical displacements also shows a vertical
@@ -340,7 +337,7 @@ estimate the expected DM-baryon displacement.
 
 
 
-\subsection{DM-baryon Displacement}
+\subsection{DM-baryon Displacements}
 \label{sec:baryonic_displacements}
 
 The results we have derived so far apply to multi-modal systems and
@@ -387,7 +384,7 @@ and $8$ times less mass resolution than the Bolshoi Simulation. The
 fit is valid for separations larger than $70$\hkpc, beyond which we
 find that it provides a remarkably good description within a factor of
 $\sim 2$ of our results. This gives us confidence in our approach to
-estimate the expected fraction of groups with a DM-baryon
+correctly estimate the expected fraction of groups with a DM-baryon
 displacement. 
 
 
