goes for a second round of comments

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -439,8 +439,9 @@ the simulation, something that is beyond the scope of this Letter.
 
 Neverthless, comparing the number for group and cluster samples in the
 last row of Table \ref{table:numbers} we can already predict that a
-fixed redshift the number density of bullets similar to \bullg that
-three times larger for groups than for clusters.   
+fixed redshift the number density of halos in the groups sample similar to \bullg is
+$\sim 6.0\times 10^{-7}$ Mpc$^{-3}$, three times larger than the
+estimate for halos in the group sample.
 
 
 
