--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -51,8 +51,8 @@
 \begin{abstract}
 
 We estimate the expected distribution of displacements between the two
-dominant dark matter (DM) density peaks (DM-DM displacements) and between
-gaseous baryons and dark matter (DM-baryon displacements) in DM halos 
+dominant dark matter (DM) peaks (DM-DM displacements) and between
+DM and gaseous baryon peak (DM-baryon displacements) in DM halos 
 with masses larger than $10^{13}$\hMsun. We use as a benchmark the
 observation of \bullg, which is the lowest mass system ($1.0\times
 10^{14}$\hMsun) observed so far
@@ -355,7 +355,7 @@ with head-on collissions, $|\mu|>0.9$, we distinguish two different
 cases. The first one, systems with  $\mu<-0.9$ and large displacements $D_{\rm
   off}>0.6$ most probably describe the beginning of the interaction
 and should have baryonic displacements equal to zero.
-equal to zero. In all the other cases, the DM-baryon displacement
+In all the other cases, the DM-baryon displacement
 should be equal to zero. We approximate this displacement by  $d_{\rm
   2D}^{\rm bar} = X_{\rm off} R_{\rm   vir}$, where $X_{\rm   off}$ is
 the offset computed between the minium of potential and the center of
